--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,9 @@
     "react-scripts": "5.0.1",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.12.1",
+    "socket.io-client": "^4.8.1",
+    "emoji-picker-react": "^4.12.0",
+    "date-fns": "^3.6.0",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
